--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "form-serialize": "^0.7.2",
     "nodemon": "^1.18.3",
     "now-env": "^3.1.0",
-    "router": "^1.3.3"
+    "router": "^1.3.3",
+    "twilio": "^3.19.2"
   }
 }
