--- a/now-sample.json
+++ b/now-sample.json
@@ -1,6 +1,7 @@
 {
   "env": {
-    "ACCOUNT_SID": "",
-    "AUTH_TOKEN": ""
+    "TWILIO_ACCOUNT_SID": "",
+    "TWILIO_AUTH_TOKEN": "",
+    "TWILIO_NUMBER": ""
   }
 }
